# defillama-rs

./: Cargo.toml
src/: lib.rs
src/coins/: client.rs
src/coins/types/: coin.rs  coins_payload.rs  current_coins_payload.rs  mod.rs  price.rs
tests/: current_prices.rs  historical_prices.rs
