[package]
name = "defillama"
version = "0.1.0"
edition = "2021"

[features]
bigdecimal = ["dep:bigdecimal"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.3"
bigdecimal = { version = "0.4", optional = true }
alloy-primitives = "0.5"
reqwest = { version = "0.11", features = ["json"] }
itertools = "0.12"
anyhow = "1.0"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
